fix routes and other aspects
